--- a/springboot/springboot-mybatis/pom.xml
+++ b/springboot/springboot-mybatis/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<fastjson.version>1.2.28</fastjson.version>
 	</properties>
 	
   <dependencies>
@@ -39,6 +40,10 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>    
+		    <groupId>org.springframework.boot</groupId>  
+		    <artifactId>spring-boot-starter-velocity</artifactId>  
+		</dependency>  
 	     <!-- <dependency>
 	        <groupId>mysql</groupId>
 	        <artifactId>mysql-connector-java</artifactId>
@@ -53,6 +58,11 @@
 	        <artifactId>spring-boot-devtools</artifactId>
 	        <optional>true</optional>
 		</dependency>
+		<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
   </dependencies>
   <build>
     <finalName>springboot-mybatis</finalName>
