更改项目名称

--- a/springboot/com.ye.springboot.dubbo/com.ye.service.web/pom.xml
+++ b/springboot/com.ye.springboot.dubbo/com.ye.service.web/pom.xml
@@ -2,11 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>SpringBoot-Maven</artifactId>
+        <groupId>com.ye</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ye</groupId>
-    <artifactId>SpringBoot-Maven</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.ye.service.web</groupId>
+    <artifactId>com.ye.service.web</artifactId>
 
 
 </project>
