--- a/springboot/com.ye.springboot.dubbo/1.2-com.ye.dubbo.provider.inf/pom.xml
+++ b/springboot/com.ye.springboot.dubbo/1.2-com.ye.dubbo.provider.inf/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>SpringBoot-Maven</artifactId>
+        <artifactId>com.ye.springboot.dubbo</artifactId>
         <groupId>com.ye</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ye.service.web</groupId>
-    <artifactId>com.ye.service.web</artifactId>
+    <groupId>com.ye</groupId>
+    <artifactId>com.ye.dubbo.provider.inf</artifactId>
 
 
 </project>
