增加消费者代码，并加入springboot默认加载的配置文件，修改端口号，避免和提供者冲突

--- a/springboot/com.ye.springboot.dubbo/1.1-com.ye.service.web/pom.xml
+++ b/springboot/com.ye.springboot.dubbo/1.1-com.ye.service.web/pom.xml
@@ -14,8 +14,37 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.ye</groupId>
+            <artifactId>com.ye.dubbo.provider.inf</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
