--- a/springboot/com.ye.springboot.dubbo/pom.xml
+++ b/springboot/com.ye.springboot.dubbo/pom.xml
@@ -11,11 +11,13 @@
     <modules>
         <module>1.1-com.ye.service.web</module>
         <module>1.2-com.ye.dubbo.provider</module>
-        <module>1.2-com.ye.dubbo.provider.inf</module>
-        <module>1.3-com.ye.pojo.common</module>
+        <module>1.3-com.ye.dubbo.provider.inf</module>
+        <module>1.4-com.ye.pojo.common</module>
         <module>2.1-com.ye.db.employee.dao</module>
         <module>2.2-com.ye.db.employee.entity</module>
-
+        <module>3.1-com.ye.dubbo.user.provider</module>
+        <module>3.2-com.ye.dubbo.user.provider.inf</module>
+        <module>3.3-com.ye.dubbo.user.dao</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
