--- a/springboot/com.ye.springboot.dubbo/1.1-com.ye.service.web/pom.xml
+++ b/springboot/com.ye.springboot.dubbo/1.1-com.ye.service.web/pom.xml
@@ -46,5 +46,9 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+        </dependency>
     </dependencies>
 </project>
