对账单表(tb_bf_order_file)的生产者服务定义，消费者的测试方法；通过mybatis链接本地mysql数据库功能

--- a/springboot/com.ye.springboot.dubbo/4.2-com.ye.dubbo.statement.provider.inf/pom.xml
+++ b/springboot/com.ye.springboot.dubbo/4.2-com.ye.dubbo.statement.provider.inf/pom.xml
@@ -9,12 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ye</groupId>
-    <artifactId>com.ye.db.employee.entity</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>com.ye.dubbo.statement.provider.inf</artifactId>
     <properties>
-        <start-class>com.ye.db.employee.entity.ApplicationMainClass</start-class>
+        <start-class>com.ye.dubbo.statement.service.inf.bf.ApplicationMainClass</start-class>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ye</groupId>
+            <artifactId>com.ye.db.employee.entity</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
