--- a/springboot/com.ye.springboot.dubbo/pom.xml
+++ b/springboot/com.ye.springboot.dubbo/pom.xml
@@ -18,6 +18,9 @@
         <module>3.1-com.ye.dubbo.user.provider</module>
         <module>3.2-com.ye.dubbo.user.provider.inf</module>
         <module>3.3-com.ye.dubbo.user.dao</module>
+        <module>4.1-com.ye.dubbo.statement.provider</module>
+        <module>4.2-com.ye.dubbo.statement.provider.inf</module>
+        <module>4.3-com.ye.dubbo.statement.dao</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -29,6 +32,9 @@
     <properties>
         <dubbo.version>2.5.3</dubbo.version>
         <zkclient.version>0.9</zkclient.version>
+
+        <start-class></start-class>
+        <exclude-artifactIds-value></exclude-artifactIds-value>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -157,12 +163,46 @@
 
     </dependencies>
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <!-- The plugin rewrites your manifest -->
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>1.3.0.RELEASE</version>
+                    <dependencies>
+                        <!-- spring热部署-->
+                        <!-- https://mvnrepository.com/artifact/org.springframework/springloaded -->
+                        <dependency>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>springloaded</artifactId>
+                            <version>1.2.6.RELEASE</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <!-- 指定该Main Class为全局的唯一入口 -->
+                        <!--<mainClass>com.yzd.Application</mainClass>-->
+                        <!--参考：Spring Boot 之路[3]-打包成可运行的jar-没办法找到唯一的一个入口类-->
+                        <!--http://www.jianshu.com/p/b521f819b06a-->
+                        <mainClass>${start-class}</mainClass>
+                        <layout>ZIP</layout>
+                        <!-- Maven打包-排除指定依赖的jar包 -->
+                        <excludeArtifactIds>${exclude-artifactIds-value}</excludeArtifactIds>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal><!--可以把依赖的包都打包到生成的Jar包中-->
+                            </goals>
+                            <!--可以生成不含依赖包的不可执行Jar包-->
+                            <!--<configuration>-->
+                            <!--<classifier>exec</classifier>-->
+                            <!--</configuration>-->
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <!--Maven根据不同的环境进行打包begin-->
         <!--各环境资源文件-->
         <resources>
